feat: complete AI platform, backend, mobile apps, and project improvements